fix: layout shifting and gaps when modals or dropdowns are open

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,5 @@
 html {
-  scrollbar-gutter: stable;
+  // scrollbar-gutter: stable;
 }
 
 /* Custom Scrollbar Styling */
